<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="270dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_alignParentRight="true"
                android:id="@+id/iv_dialog_setting"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_shezhi"
                android:visibility="gone" />

            <TextView
                android:layout_alignParentRight="true"
                android:id="@+id/tv_live_manage_or_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/report"
                android:textColor="@color/global"
                android:textSize="@dimen/text_size_15"
                android:visibility="gone" />

        </RelativeLayout>
        <!--顶部-->
        <LinearLayout
            android:padding="10dp"
            android:id="@+id/dialog_rl_top_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.daimeng.live.widget.CircleImageView
                    android:id="@+id/av_show_dialog_u_head"
                    android:layout_width="70dp"
                    android:layout_height="70dp" />

                <TextView
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:id="@+id/tv_show_dialog_u_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxEms="8"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15" />
                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <!--性别-->
                    <ImageView
                        android:id="@+id/iv_show_dialog_sex"
                        android:layout_width="15dp"
                        android:layout_height="15dp" />
                    <!--等级-->
                    <ImageView
                        android:id="@+id/iv_show_dialog_level"
                        android:layout_width="32dp"
                        android:layout_height="@dimen/space_25"
                        android:layout_marginLeft="5dp" />

                    <ImageView
                        android:id="@+id/iv_dialog_renzheng"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <!--id-->
                <TextView
                    android:textSize="@dimen/text_size_12"
                    android:id="@+id/tv_user_info_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray4" />

                <TextView
                    android:id="@+id/tv_show_dialog_u_address"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:textColor="@color/colorGray3"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>
            <!--签名-->

            <TextView
                android:id="@+id/tv_user_info_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/text_gray3" />

            <!--返回管理举报-->

        </LinearLayout>


        <LinearLayout
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--关注,粉丝映票-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="0"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_16"
                        android:textColor="@color/black"
                        android:id="@+id/tv_show_dialog_u_ticket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="3dp"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="收入"
                        android:textColor="@color/colorGray4"
                        android:textSize="@dimen/text_size_12" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="0"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_16"
                        android:textColor="@color/black"
                        android:id="@+id/tv_show_dialog_u_fans_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="3dp"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="粉丝"
                        android:textColor="@color/colorGray4"
                        android:textSize="@dimen/text_size_12" />
                </LinearLayout>


                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="0"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_16"
                        android:textColor="@color/black"
                        android:id="@+id/tv_show_dialog_u_fllow_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="3dp"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="关注"
                        android:textColor="@color/colorGray4"
                        android:textSize="@dimen/text_size_12" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorGray2"/>

            <!--底部菜单-->
            <LinearLayout
                android:id="@+id/ll_user_info_dialog"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_show_dialog_u_follow_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/attention"
                    android:textColor="@color/global"
                    android:textSize="@dimen/text_size_12" />

                <View
                    android:layout_width="1px"
                    style="@style/v_line"/>

                <TextView
                    android:id="@+id/tv_show_dialog_u_private_chat_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/private_chat"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_12" />
                <View
                    android:layout_width="1px"
                    style="@style/v_line"/>

                <TextView
                android:id="@+id/tv_show_dialog_u_home_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_page"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_12" />
                <View
                    android:layout_width="1px"
                    style="@style/v_line"/>
                <TextView
                    android:id="@+id/tv_show_dialog_at_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/at_ta"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>

            <!--底部菜单-->
            <LinearLayout
                android:id="@+id/ll_user_info_dialog2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_show_dialog_u_home_btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/main_page"
                    android:textColor="@color/global"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>

